# plutus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/plutus-api/: Cargo.toml
crates/plutus-api/src/: audit_middleware.rs  error.rs  i18n.rs  lib.rs  openapi.rs  state.rs
crates/plutus-api/src/auth/: middleware.rs  mod.rs  password.rs  session.rs  token.rs
crates/plutus-api/src/dto/: account.rs  analyst.rs  broker.rs  catalyst.rs  connect.rs  correlation.rs  earnings.rs  filing.rs  fundamentals.rs  fx.rs  holding.rs  insider.rs  macro_event.rs  macros.rs  market.rs  market_brief.rs  mod.rs  news.rs  ohlcv.rs  pending_order.rs  portfolio.rs  portfolio_review.rs  recommendation.rs  screener.rs  sector.rs  self_exam.rs  stock.rs  token.rs  trade_plan.rs  transaction.rs  user.rs  watchlist.rs  watchlist_report.rs
crates/plutus-api/src/handlers/: access.rs  accounts.rs  analyst.rs  audit.rs  auth.rs  batch.rs  brokers.rs  catalysts.rs  connect.rs  correlations.rs  earnings.rs  filings.rs  fundamentals.rs  fx.rs  holdings.rs  insider.rs  macro_events.rs  macros.rs  market_briefs.rs  markets.rs  meta.rs  mod.rs  news.rs  ohlcv.rs  pagination.rs  pending_orders.rs  portfolio.rs  portfolio_reviews.rs  recommendations.rs  screeners.rs  sectors.rs  self_exams.rs  stocks.rs  tokens.rs  trade_plans.rs  transactions.rs  unread.rs  watchlist_reports.rs  watchlists.rs
crates/plutus-api/src/handlers/admin/: brokers.rs  mod.rs  tokens.rs  users.rs
crates/plutus-core/: Cargo.toml
crates/plutus-core/src/: audit.rs  cost_basis.rs  currency.rs  error.rs  idempotency.rs  ids.rs  lib.rs  market.rs  money.rs  provenance.rs  quantity.rs  transaction.rs
crates/plutus-server/: Cargo.toml
crates/plutus-server/src/: main.rs
crates/plutus-storage/: Cargo.toml
crates/plutus-storage/src/: db.rs  lib.rs  seed.rs
crates/plutus-storage/src/models/: account.rs  analyst.rs  api_token.rs  audit_log.rs  broker.rs  broker_symbol.rs  catalyst.rs  connect.rs  correlation_pair.rs  correlation_run.rs  currency.rs  earnings_event.rs  filing.rs  fundamentals.rs  fx_rate.rs  idempotency.rs  insider.rs  macro_event.rs  macro_indicator.rs  macro_observation.rs  market.rs  market_brief.rs  mod.rs  news_item.rs  news_links.rs  news_translation.rs  ohlcv.rs  pending_order.rs  portfolio_review.rs  recommendation.rs  screener_hit.rs  screener_run.rs  sector.rs  self_exam.rs  setting.rs  stock.rs  stock_translation.rs  trade_plan.rs  trade_plan_level.rs  transaction.rs  (+6 more)
crates/plutus-storage/src/queries/: accounts.rs  analyst.rs  audit.rs  brokers.rs  catalysts.rs  connect.rs  correlations.rs  earnings.rs  filings.rs  fundamentals.rs  fx.rs  holdings.rs  idempotency.rs  insider.rs  macro_events.rs  macros.rs  market_briefs.rs  markets.rs  mod.rs  news.rs  ohlcv.rs  pending_orders.rs  portfolio.rs  portfolio_reviews.rs  recommendations.rs  screeners.rs  sectors.rs  self_exams.rs  settings.rs  stock_translations.rs  stocks.rs  tokens.rs  trade_plans.rs  transactions.rs  unread.rs  users.rs  watchlist.rs  watchlist_reports.rs  watchlists.rs  web_sessions.rs
deploy/: README.md  compose.dev.yml  compose.yml
deploy/api/: Dockerfile
deploy/postgres/: Dockerfile  init.sql
deploy/systemd/: plutus-backup.service  plutus-backup.timer
scripts/: backup.sh  bootstrap.sh  deploy.sh  smoke.sh
web/: AGENTS.md  Dockerfile  README.md  package.json  pnpm-lock.yaml
web/app/: api.ts  router.ts  routes.ts
web/app/controllers/: accounts.tsx  admin-brokers.tsx  admin-tokens.tsx  admin.tsx  api-keys.tsx  audit.tsx  brief-detail.tsx  briefs.tsx  catalyst-detail.tsx  catalysts.tsx  change-password.tsx  correlation-detail.tsx  correlations.tsx  earnings-detail.tsx  earnings.tsx  holdings.tsx  home.tsx  login.tsx  logout.tsx  macro-event-detail.tsx  macro-events.tsx  mark-all-read.tsx  news-detail.tsx  news.tsx  orders.tsx  portfolio-review-detail.tsx  portfolio-reviews.tsx  recommendation-detail.tsx  recommendations.tsx  screener-detail.tsx  screeners.tsx  self-exam-detail.tsx  self-exams.tsx  settings.tsx  stock-detail.tsx  stocks.tsx  trade-plans.tsx  transactions.tsx  watchlist-detail.tsx  watchlists.tsx
web/app/i18n/: messages.ts
web/app/ui/: document.tsx  entity-detail.tsx  format.ts  icon.tsx  layout.tsx  local-time.tsx  markdown.tsx  pagination.tsx  remix-theme.ts  tokens.ts
web/app/utils/: auth.ts  flash-store.ts  render.tsx
