[package]
name = "plutus-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
plutus-core = { workspace = true }
plutus-storage = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
jiff = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
