[package]
name = "plutus-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
jiff = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }

[lints]
workspace = true
