[package]
name = "plutus-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "plutus"
path = "src/main.rs"

[dependencies]
plutus-core = { workspace = true }
plutus-storage = { workspace = true }
plutus-api = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
