[package]
name = "plutus-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
plutus-core = { workspace = true }

toasty = { workspace = true }
tokio = { workspace = true }
tokio-postgres = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
jiff = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
